--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -117,11 +117,11 @@
 
 ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters 
 ## through polynomial regression. X values are simply array's indexes (from 0 to 10 included).
- ac_backlight_regression_points = [ 0.1, 0.15, 0.29, 0.45, 0.61, 0.74, 0.81, 0.88, 0.93, 0.97, 1.0 ];
+ ac_backlight_regression_points = [ 0.17, 0.22, 0.3, 0.45, 0.61, 0.70, 0.81, 0.88, 0.90, 0.94, .98 ];
 
 ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters 
 ## through polynomial regression. X values are simply array's indexes (from 0 to 10 included).
- batt_backlight_regression_points = [ 0.1, 0.15, 0.23, 0.36, 0.52, 0.59, 0.65, 0.71, 0.75, 0.78, 0.80 ];
+ batt_backlight_regression_points = [ 0.1, 0.15, 0.23, 0.36, 0.52, 0.59, 0.64, 0.70, 0.75, 0.78, 0.82 ];
 
 ## Number of frames or ALS device pollings to be captured
 # captures = 5;
