update presentview script, more responsive :D

--- a/.config/gebaar/gebaard.toml
+++ b/.config/gebaar/gebaard.toml
@@ -1,11 +1,11 @@
 [commands.swipe.three]
 left_up = ""
 right_up = ""
-up = "./home/nicholas/Scripts/gestures/presentview --up"
+up = "~/Scripts/gestures/presentview --up"
 #up = "xdotool key ctrl+F9"
 left_down = ""
 right_down = ""
-down = "./home/nicholas/Scripts/gestures/presentview --down"
+down = "~/Scripts/gestures/presentview --down"
 #down = "xdotool key super+s"
 left = "xdotool key alt+Right"
 right = "xdotool key alt+Left"
@@ -22,4 +22,4 @@ right = "xdotool key super+d"
 
 [commands.pinch]
 in = "xdotool key ctrl+shift+t"
-out = "./home/nicholas/Scripts/gestures/firefoxorbust"
+out = "~/Scripts/gestures/firefoxorbust"
