Update clight conf with new options

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -17,13 +17,10 @@
 ## in the corresponding AC state.
 # dimmer_timeouts = [ 45, 20 ];
 
-## Timeouts for dpms on AC
-## Set any of these to <= 0 to disable dpms on AC
-# ac_dpms_timeouts = [ 900, 1200, 1800 ];
-
-## Timeout for dpms on BATT
-## Set any of these to <= 0 to disable dpms on BATT
-# batt_dpms_timeouts = [ 300, 420, 600 ];
+## Dpms timeouts on AC/on BATT.
+## Set any of these to <= 0 to disable dpms
+## in the corresponding AC state.
+# dpms_timeouts = [ 900, 300 ];
 
 #########
 # GAMMA #
@@ -56,7 +53,13 @@
 ## Note that if clight is started outside of an event, correct gamma temperature
 ## will be immediately setted using normal parameters:
 ## no_smooth_gamma_transition, gamma_trans_step, gamma_trans_timeout
-# gamma_long_transition = false;
+# gamma_long_transition = true;
+
+## Let screen temperature match ambient brightness, like monitor backlight.
+## When enabled, screen temperature won't be changed time-based.
+## Note that it uses same curve points as backlight.
+## Finally, it requires BACKLIGHT module to be enabled, otherwise GAMMA gets disabled.
+# ambient_gamma = true;
 
 ###################
 # DISABLE MODULES #
@@ -88,8 +91,9 @@
 ## Uncomment to disable gamma smooth transitions
 # no_smooth_gamma_transition = true;
 
-## Uncomment to disable dimmer smooth transitions
-# no_smooth_dimmer_transition = true;
+## Uncomment to disable dimmer smooth transitions 
+## when entering/leaving dimmed state
+# no_smooth_dimmer_transition [ true, true ];
 
 ## Backlight transition step in percentage
  backlight_trans_step = 0.01;
