Change gtk fonts

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -3,7 +3,7 @@ gtk-application-prefer-dark-theme=true
 gtk-button-images=0
 gtk-cursor-theme-name=breeze_cursors
 gtk-fallback-icon-theme=breeze-dark
-gtk-font-name=Noto Sans Regular 10
+gtk-font-name=Fira Sans Regular 10
 gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=1
 gtk-modules=appmenu-gtk-module
