--- a/.config/systemd/user/gebaard.service
+++ b/.config/systemd/user/gebaard.service
@@ -3,8 +3,9 @@ Description=Gebaar Daemon
 Documentation=https://github.com/Coffee2CodeNL/gebaar-libinput
 
 [Service]
+Environment=DISPLAY=:0
 ExecStart=/usr/local/bin/gebaard
 Restart=always
 
 [Install]
-WantedBy=default.target
+WantedBy=graphical-session.target
