--- a/.config/systemd/user/gebaard.service
+++ b/.config/systemd/user/gebaard.service
@@ -3,9 +3,9 @@ Description=Gebaar Daemon
 Documentation=https://github.com/Coffee2CodeNL/gebaar-libinput
 
 [Service]
-Environment=DISPLAY=:0
 ExecStart=/usr/local/bin/gebaard
+Environment=DISPLAY=:0
 Restart=always
 
 [Install]
-WantedBy=graphical-session.target
+WantedBy=default.target
