Shorten zplugin commands using functions, changes variables, update Barrier conf

--- a/.config/Debauchee/Barrier.conf
+++ b/.config/Debauchee/Barrier.conf
@@ -13,7 +13,7 @@ language=en
 logFilename=/var/log/barrier.log
 logLevel=3
 logToFile=false
-minimizeToTray=true
+minimizeToTray=false
 port=24800
 screenName=nicholas-laptop
 serverHostname=
