Better MOUSE_ID command in presentview script

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -3,22 +3,22 @@
 <fontconfig>
  <dir>~/.fonts</dir>
  <match target="font">
-  <edit mode="assign" name="rgba">
+  <edit name="rgba" mode="assign">
    <const>rgb</const>
   </edit>
  </match>
  <match target="font">
-  <edit mode="assign" name="hinting">
+  <edit name="hinting" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
  <match target="font">
-  <edit mode="assign" name="hintstyle">
+  <edit name="hintstyle" mode="assign">
    <const>hintslight</const>
   </edit>
  </match>
  <match target="font">
-  <edit mode="assign" name="antialias">
+  <edit name="antialias" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
