Update Barrier files

--- a/.config/Debauchee/Barrier.conf
+++ b/.config/Debauchee/Barrier.conf
@@ -2,6 +2,7 @@
 autoConfig=true
 autoConfigPrompted=true
 autoHide=false
+configFile=/home/nicholas/barrier.conf
 cryptoEnabled=true
 elevateMode=false
 elevateModeEnum=0
@@ -15,5 +16,47 @@ logToFile=false
 minimizeToTray=false
 port=24800
 screenName=Nicks-Laptop
+serverHostname=
 startedBefore=true
+useExternalConfig=false
+useInternalConfig=true
 wizardLastRun=9
+
+[internalConfig]
+clipboardSharing=true
+enableDragAndDrop=true
+hasHeartbeat=false
+hasSwitchDelay=false
+hasSwitchDoubleTap=false
+heartbeat=5000
+hotkeys\size=0
+ignoreAutoConfigClient=false
+numColumns=5
+numRows=3
+relativeMouseMoves=false
+screenSaverSync=true
+screens\1\name=
+screens\10\name=
+screens\11\name=
+screens\12\name=
+screens\13\name=
+screens\14\name=
+screens\15\name=
+screens\2\name=
+screens\3\name=
+screens\4\name=
+screens\5\name=
+screens\6\name=
+screens\7\name=
+screens\8\name=
+screens\9\name=
+screens\size=15
+switchCornerArray\1\switchCorner=false
+switchCornerArray\2\switchCorner=false
+switchCornerArray\3\switchCorner=false
+switchCornerArray\4\switchCorner=false
+switchCornerArray\size=4
+switchCornerSize=0
+switchDelay=250
+switchDoubleTap=250
+win32KeepForeground=false
