--- a/.config/watch_tablet.yml
+++ b/.config/watch_tablet.yml
@@ -5,14 +5,13 @@ modes:
     #- xinput enable "AT Translated Set 2 keyboard"
     #- xinput enable "SynPS/2 Synaptics TouchPad"
     #- xinput enable "TPPS/2 IBM TrackPoint"
+     - pkill libinput-touchs
      - pkill onboard
      - pkill screenrotator
      - xrandr -o normal
      - /bin/bash /home/nicholas/Scripts/tabletmode/landscape
   tablet:
     # - xinput disable "Wacom Pen and multitouch sensor Finger"
-    #- xinput disable "AT Translated Set 2 keyboard"
-    #- xinput disable "SynPS/2 Synaptics TouchPad"
-    #- xinput disable "TPPS/2 IBM TrackPoint"
      - screenrotator &
      - onboard &
+     - /home/nicholas/github/libinput-touchscreen/libinput-touchscreen &
