Enable keyboard backlight calibration and use dimmer module in place of builtin one(testing it out)

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -48,7 +48,7 @@
 # screen_sysname = "intel_backlight";
 
 ## Uncomment to disable keyboard backlight automatic calibration.
- no_kdb_backlight = true;
+# no_kdb_backlight = true;
 
 ## Set a threshold: if detected ambient brightness is below this threshold,
 ## capture will be discarded and no backlight change will be made.
@@ -60,7 +60,7 @@
 
 ## Uncomment to let BACKLIGHT module inhibit automatic calibration
 ## when Screensaver inhibition is enabled.
- inhibit_autocalib = true;
+# inhibit_autocalib = true;
 
 #########
 # GAMMA #
@@ -119,7 +119,7 @@
 ##########
 
 ## Uncomment to disable dimmer tool
- no_dimmer = true;
+# no_dimmer = true;
 
 ## Uncomment to disable dimmer smooth transitions 
 ## when entering/leaving dimmed state
@@ -136,10 +136,10 @@
 ## Dimmer timeouts on AC/on BATT. 
 ## Set any of these to <= 0 to disable dimmer
 ## in the corresponding AC state.
-# dimmer_timeouts = [ 45, 20 ];
+ dimmer_timeouts = [ 1800, 300 ];
 
 ## Change dimmer backlight level, in percentage
-# dimmer_pct = 0.2;
+ dimmer_pct = 0.01;
 
 ########
 # DPMS #
