Don't use clight dimmer, idk why I wanted to

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -119,7 +119,7 @@
 ##########
 
 ## Uncomment to disable dimmer tool
-# no_dimmer = true;
+ no_dimmer = true;
 
 ## Uncomment to disable dimmer smooth transitions 
 ## when entering/leaving dimmed state
