--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -88,10 +88,10 @@
 # longitude = 7.16;
 
 ## Force set a sunrise time
-# sunrise = "7:00";
+ sunrise = "7:30";
 
 ## Force set a sunset time
-# sunset = "19:00";
+ sunset = "18:30";
 
 ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
 ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
@@ -136,10 +136,10 @@
 ## Dimmer timeouts on AC/on BATT. 
 ## Set any of these to <= 0 to disable dimmer
 ## in the corresponding AC state.
- dimmer_timeouts = [ 1800, 300 ];
+# dimmer_timeouts = [ 1800, 300 ];
 
 ## Change dimmer backlight level, in percentage
- dimmer_pct = 0.01;
+# dimmer_pct = 0.01;
 
 ########
 # DPMS #
@@ -179,7 +179,7 @@
 
 ## How much does your screen-emitted brightness affect
 ## ambient brightness, in your setup, in percentage.
- screen_contrib = 0.09;
+# screen_contrib = 0.09;
 
 ## How many samples should be used to compute average 
 ## screen-emitted brightness.
