Update gebaard-tablet path

--- a/.config/systemd/user/gebaard-tablet.service
+++ b/.config/systemd/user/gebaard-tablet.service
@@ -4,7 +4,7 @@ Documentation=https://github.com/Coffee2CodeNL/gebaar-libinput
 
 [Service]
 ExecStartPre=/usr/bin/cp -f %h/.config/gebaar/gebaard.toml-tablet %h/.config/gebaar/gebaard.toml
-ExecStart=%h/github/gebaar-libinput/build/gebaard-tablet -v
+ExecStart=/usr/local/bin/gebaard-tablet
 Environment=DISPLAY=:0
 Restart=always
 
