Update gebaard units to conflict with each other

--- a/.config/systemd/user/gebaard-tablet.service
+++ b/.config/systemd/user/gebaard-tablet.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Gebaar Daemon
 Documentation=https://github.com/Coffee2CodeNL/gebaar-libinput
+Conflicts=gebaard.service
 
 [Service]
 ExecStartPre=/usr/bin/cp -f %h/.config/gebaar/gebaard.toml-tablet %h/.config/gebaar/gebaard.toml
