--- a/.config/systemd/user/gebaard.service
+++ b/.config/systemd/user/gebaard.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Gebaar Daemon
 Documentation=https://github.com/Coffee2CodeNL/gebaar-libinput
+Conflicts=gebaard-tablet.service
 
 [Service]
 ExecStartPre=/usr/bin/cp -f %h/.config/gebaar/gebaard.toml-laptop %h/.config/gebaar/gebaard.toml
