Use new gebaard binary and config options, update units and watch_tablet

--- a/.config/gebaar/gebaard-laptop.toml
+++ b/.config/gebaar/gebaard-laptop.toml
@@ -23,3 +23,6 @@ right = 'qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Window Quick
 [commands.pinch]
 in = "xdotool key ctrl+shift+t"
 out = "~/Scripts/gestures/firefoxorbust"
+
+[gesture.type]
+type = "GESTURE"
