--- a/.config/watch_tablet.yml
+++ b/.config/watch_tablet.yml
@@ -3,7 +3,7 @@ modes:
   laptop:
      - pkill onboard
      - pkill screenrotator
-     - systemctl --user start gebaard
+     - systemctl --user start gebaard-laptop
      - /bin/bash /home/nicholas/Scripts/tabletmode/landscape
   tablet:
      - screenrotator &
