small changes everywhere

--- a/.config/gebaar/gebaard-tablet.toml
+++ b/.config/gebaar/gebaard-tablet.toml
@@ -32,5 +32,5 @@ down = 'qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "MinimizeAll"'
 left = 'qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Window Quick Tile Left"'
 right = 'qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Window Quick Tile Right"'
 
-[gesture.type]
+[interact.type]
 type = "TOUCH"
