--- a/.config/gebaar/gebaard-laptop.toml
+++ b/.config/gebaar/gebaard-laptop.toml
@@ -24,5 +24,5 @@ right = 'qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Window Quick
 in = "xdotool key ctrl+shift+t"
 out = "~/Scripts/gestures/firefoxorbust"
 
-[gesture.type]
+[interact.type]
 type = "GESTURE"
