watch_tablet functionality integrated into gebaar - update confs to reflect

--- a/.config/gebaar/gebaard.toml
+++ b/.config/gebaar/gebaard.toml
@@ -38,3 +38,10 @@ right = 'qdbus org.kde.kglobalaccel /component/kwin invokeShortcut "Window Quick
 [command-pinch]
 in = "~/Scripts/gestures/firefoxorbust"
 out = "xdotool key ctrl+shift+t"
+
+[command-switch]
+laptop = "pkill onboard; pkill screenrotator; /bin/bash /home/nicholas/Scripts/tabletmode/landscape"
+tablet = "screenrotator & onboard &"
+
+[interact.type]
+type = "GESTURE"
