--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -26,11 +26,11 @@
 
 ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters 
 ## through polynomial regression. X values are simply array's indexes (from 0 to 10 included).
- ac_backlight_regression_points = [ 0.02, 0.5, 0.18, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.91, 0.98 ];
+ ac_backlight_regression_points = [ 0.02, 0.09, 0.18, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
 
 ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters 
 ## through polynomial regression. X values are simply array's indexes (from 0 to 10 included).
- batt_backlight_regression_points = [ 0.02, 0.09, 0.12, 0.19, 0.25, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
+ batt_backlight_regression_points = [ 0.02, 0.09, 0.11, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
 ## Number of frames or ALS device pollings to be captured
 # captures = 5;
@@ -42,7 +42,7 @@
 ## as "A=b,C=d" string, where A and C are v4l2 operations, and b and d are their requested values.
 ## Example string below does read as "V4L2_CID_EXPOSURE_AUTO=V4L2_EXPOSURE_MANUAL,V4L2_CID_EXPOSURE_ABSOLUTE=166".
 ## This is only useful for webcam sensors right now. Leave empty/commented to use webcam default values.
-# sensor_settings = "10094849=1,10094850=166";
+ sensor_settings = "10094849=1,10094850=166";
 
 ## Screen syspath to be use
 # screen_sysname = "intel_backlight";
@@ -179,7 +179,7 @@
 
 ## How much does your screen-emitted brightness affect
 ## ambient brightness, in your setup, in percentage.
-# screen_contrib = 0.09;
+ screen_contrib = 0.11;
 
 ## How many samples should be used to compute average 
 ## screen-emitted brightness.
