Add micro bindings and update

--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -2,7 +2,7 @@
     "autoclose": true,
     "autoindent": true,
     "autosave": false,
-    "basename": false,
+    "basename": true,
     "colorcolumn": 0,
     "colorscheme": "default",
     "cursorline": true,
