Update some config files

--- a/.config/Debauchee/Barrier.conf
+++ b/.config/Debauchee/Barrier.conf
@@ -2,7 +2,7 @@
 autoConfig=true
 autoConfigPrompted=true
 autoHide=false
-configFile=/home/nicholas/barrier.conf
+configFile=/home/nicholas/.config/Debauchee/Barrier.conf
 cryptoEnabled=true
 elevateMode=false
 elevateModeEnum=0
@@ -18,8 +18,8 @@ port=24800
 screenName=Nicks-Laptop
 serverHostname=
 startedBefore=true
-useExternalConfig=false
-useInternalConfig=true
+useExternalConfig=true
+useInternalConfig=false
 wizardLastRun=9
 
 [internalConfig]
