--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -2,13 +2,17 @@
     "autoclose": true,
     "autoindent": true,
     "autosave": false,
+    "backup": true,
     "basename": true,
     "colorcolumn": 0,
     "colorscheme": "default",
+    "comment": true,
     "cursorline": true,
+    "encoding": "utf-8",
     "eofnewline": false,
     "fastdirty": true,
     "fileformat": "unix",
+    "filetype": "unknown",
     "ftoptions": true,
     "hidehelp": false,
     "ignorecase": false,
@@ -20,11 +24,13 @@
     "literate": true,
     "matchbrace": true,
     "matchbraceleft": true,
+    "mkparents": false,
     "mouse": true,
     "pluginchannels": [
         "https://raw.githubusercontent.com/micro-editor/plugin-channel/master/channel.json"
     ],
     "pluginrepos": [],
+    "readonly": false,
     "rmtrailingws": false,
     "ruler": true,
     "savecursor": false,
@@ -37,6 +43,8 @@
     "softwrap": true,
     "splitbottom": true,
     "splitright": true,
+    "statusformatl": "$(filename) $(modified)($(line),$(col)) | ft:$(opt:filetype) | $(opt:fileformat) | $(opt:encoding)",
+    "statusformatr": "$(bind:ToggleKeyMenu): bindings, $(bind:ToggleHelp): help",
     "statusline": true,
     "sucmd": "sudo",
     "syntax": true,
