Small updates to clight.conf

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -13,7 +13,7 @@
 # no_smooth_backlight_transition = true;
 
 ## Backlight transition step in percentage
- backlight_trans_step = 0.01;
+ backlight_trans_step = 0.02;
 
 ## Backlight transition timeout in ms
 # backlight_trans_timeout = 30;
@@ -35,8 +35,8 @@
 ## Number of frames or ALS device pollings to be captured
 # captures = 5;
 
-## Sensor device to be used (Webcam or ALS device)
-# sensor_devname = "video0";
+## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0)
+# sensor_devname = "";
 
 ## Sensor settings to be used. You should set values taken from <linux/v4l2-controls.h>,
 ## as "A=b,C=d" string, where A and C are v4l2 operations, and b and d are their desired values.
@@ -54,6 +54,7 @@
 
 ## Set a threshold: if detected ambient brightness is below this threshold,
 ## capture will be discarded and no backlight change will be made.
+## Very useful for docked laptop with lid closed.
 # shutter_threshold = 0.10;
 
 ## Disables automatic calibration for screen backlight.
