--- a/.local/share/applications/barrier.desktop
+++ b/.local/share/applications/barrier.desktop
@@ -2,7 +2,7 @@
 Categories=Utility;
 Comment[en_US]=Keyboard and mouse sharing solution
 Comment=Keyboard and mouse sharing solution
-Exec=xbindkeys -f ~/Scripts/gestures/.xbindkeysrc && barrier && killall xbindkeys
+Exec=xbindkeys -f ~/Scripts/tools/barrier && barrier && killall xbindkeys
 GenericName[en_US]=
 GenericName=
 Icon=barrier
