--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -1,16 +1,18 @@
 {
     "autoclose": true,
     "autoindent": true,
-    "autosave": false,
+    "autosave": 0,
     "backup": true,
     "basename": true,
     "colorcolumn": 0,
     "colorscheme": "default",
     "comment": true,
     "cursorline": true,
+    "diff": true,
+    "diffgutter": false,
     "encoding": "utf-8",
     "eofnewline": false,
-    "fastdirty": true,
+    "fastdirty": false,
     "fileformat": "unix",
     "filetype": "unknown",
     "ftoptions": true,
