Enable dimmer in clight to replace powerdevils

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -122,7 +122,7 @@
 ##########
 
 ## Uncomment to disable dimmer tool
- no_dimmer = true;
+# no_dimmer = true;
 
 ## Uncomment to disable dimmer smooth transitions 
 ## when entering/leaving dimmed state
@@ -130,7 +130,7 @@
 
 ## Dimmer transition step in percentage.
 ## Entering dimmed state fade, and leaving fade
-# dimmer_trans_steps = [ 0.05, 0.05 ];
+ dimmer_trans_steps = [ 0.03, 0.03 ];
 
 ## Dimmer transition timeout in ms.
 ## Entering dimmed state fade, and leaving fade
@@ -139,7 +139,7 @@
 ## Dimmer timeouts on AC/on BATT. 
 ## Set any of these to <= 0 to disable dimmer
 ## in the corresponding AC state.
-# dimmer_timeouts = [ 1800, 300 ];
+ dimmer_timeouts = [ 1800, 540 ];
 
 ## Change dimmer backlight level, in percentage
 # dimmer_pct = 0.01;
@@ -149,12 +149,12 @@
 ########
 
 ## Uncomment to disable dpms tool
- no_dpms = true;
+# no_dpms = true;
 
 ## Dpms timeouts on AC/on BATT.
 ## Set any of these to <= 0 to disable dpms
 ## in the corresponding AC state.
-# dpms_timeouts = [ 900, 300 ];
+ dpms_timeouts = [ 2700, 900 ];
 
 ##########
 # SCREEN #
@@ -195,4 +195,4 @@
 ## Verbose mode, useful in case of bugs:
 ## run clight in verbose mode,
 ## then open issue on github attaching log
-# verbose = true;
+ verbose = true;
