Refresh dotfiles: Rename/rm files, new zsh plugins, fix tmp in presentview, update MaterialFox, add konsole profile, update Micro settings/bindings

--- a/.config/Debauchee/Barrier.conf
+++ b/.config/Debauchee/Barrier.conf
@@ -47,8 +47,48 @@ screens\3\name=
 screens\4\name=
 screens\5\name=
 screens\6\name=
-screens\7\name=
-screens\8\name=
+screens\7\aliasArray\size=0
+screens\7\fixArray\1\fix=false
+screens\7\fixArray\2\fix=false
+screens\7\fixArray\3\fix=false
+screens\7\fixArray\4\fix=false
+screens\7\fixArray\5\fix=false
+screens\7\fixArray\size=5
+screens\7\modifierArray\1\modifier=0
+screens\7\modifierArray\2\modifier=1
+screens\7\modifierArray\3\modifier=2
+screens\7\modifierArray\4\modifier=3
+screens\7\modifierArray\5\modifier=4
+screens\7\modifierArray\6\modifier=5
+screens\7\modifierArray\size=6
+screens\7\name=Nicholas-Desktop
+screens\7\switchCornerArray\1\switchCorner=false
+screens\7\switchCornerArray\2\switchCorner=false
+screens\7\switchCornerArray\3\switchCorner=false
+screens\7\switchCornerArray\4\switchCorner=false
+screens\7\switchCornerArray\size=4
+screens\7\switchCornerSize=0
+screens\8\aliasArray\size=0
+screens\8\fixArray\1\fix=false
+screens\8\fixArray\2\fix=false
+screens\8\fixArray\3\fix=false
+screens\8\fixArray\4\fix=false
+screens\8\fixArray\5\fix=false
+screens\8\fixArray\size=5
+screens\8\modifierArray\1\modifier=0
+screens\8\modifierArray\2\modifier=1
+screens\8\modifierArray\3\modifier=2
+screens\8\modifierArray\4\modifier=3
+screens\8\modifierArray\5\modifier=4
+screens\8\modifierArray\6\modifier=5
+screens\8\modifierArray\size=6
+screens\8\name=Nicks-Laptop
+screens\8\switchCornerArray\1\switchCorner=false
+screens\8\switchCornerArray\2\switchCorner=false
+screens\8\switchCornerArray\3\switchCorner=false
+screens\8\switchCornerArray\4\switchCorner=false
+screens\8\switchCornerArray\size=4
+screens\8\switchCornerSize=0
 screens\9\name=
 screens\size=15
 switchCornerArray\1\switchCorner=false
