--- a/.config/micro/settings.json
+++ b/.config/micro/settings.json
@@ -2,6 +2,7 @@
     "autoclose": true,
     "autoindent": true,
     "autosave": 0,
+    "autosu": false,
     "backup": true,
     "basename": true,
     "colorcolumn": 0,
@@ -11,12 +12,11 @@
     "diff": true,
     "diffgutter": false,
     "encoding": "utf-8",
-    "eofnewline": false,
+    "eofnewline": true,
     "fastdirty": false,
     "fileformat": "unix",
     "filetype": "unknown",
     "ftoptions": true,
-    "hidehelp": false,
     "ignorecase": false,
     "indentchar": " ",
     "infobar": true,
@@ -25,7 +25,6 @@
     "linter": true,
     "literate": true,
     "matchbrace": true,
-    "matchbraceleft": true,
     "mkparents": false,
     "mouse": true,
     "paste": false,
@@ -47,7 +46,7 @@
     "splitbottom": true,
     "splitright": true,
     "status": true,
-    "statusformatl": "$(filename) $(modified)($(line),$(col)) | ft:$(opt:filetype) | $(opt:fileformat) | $(opt:encoding)",
+    "statusformatl": "$(filename) $(modified)($(line),$(col)) $(status.paste)| ft:$(opt:filetype) | $(opt:fileformat) | $(opt:encoding)",
     "statusformatr": "$(bind:ToggleKeyMenu): bindings, $(bind:ToggleHelp): help",
     "statusline": true,
     "sucmd": "sudo",
@@ -55,6 +54,6 @@
     "tabmovement": false,
     "tabsize": 4,
     "tabstospaces": false,
-    "termtitle": false,
-    "useprimary": true
+    "useprimary": true,
+    "xterm": false
 }
