--- a/.config/autostart/org.kde.latte-dock.desktop
+++ b/.config/autostart/org.kde.latte-dock.desktop
@@ -8,18 +8,21 @@ Name[de]=Latte
 Name[el]=Latte
 Name[en_GB]=Latte
 Name[es]=Latte
+Name[et]=Latte
 Name[eu]=Latte
 Name[fi]=Latte
 Name[gl]=Latte
 Name[id]=Latte
 Name[it]=Latte
 Name[ko]=Latte
+Name[lt]=Latte
 Name[nl]=Latte
 Name[nn]=Latte
 Name[pl]=Latte
 Name[pt]=Latte
 Name[pt_BR]=Latte
 Name[ru]=Latte
+Name[sk]=Latte
 Name[sv]=Latte
 Name[uk]=Латте
 Name[x-test]=xxLattexx
@@ -34,18 +37,21 @@ Comment[de]=Dock für die Massen
 Comment[el]=Διαχειριστής εργασιών για όλον τον κόσμο
 Comment[en_GB]=Dock for the masses
 Comment[es]=Un dock para las masas
+Comment[et]=Dokk massidele
 Comment[eu]=Jendartearen kaia
 Comment[fi]=Telakka massoille
 Comment[gl]=Doca para as masas.
 Comment[id]=Dock untuk mengumpulkan
 Comment[it]=Area di aggancio per le masse
-Comment[ko]=다수의 응용프로그램을 위한 독
+Comment[ko]=다수의 프로그램을 위한 도구집
+Comment[lt]=Dokas masėms
 Comment[nl]=Dock voor de massa
 Comment[nn]=Dokk for massane
 Comment[pl]=Dok dla mas
 Comment[pt]=Área acoplável para as massas
 Comment[pt_BR]=Área acoplável para todos
 Comment[ru]=Док для всех
+Comment[sk]=Dok pre davy ľudí
 Comment[sv]=Dockningsfönster för alla
 Comment[uk]=Панель для усіх
 Comment[x-test]=xxDock for the massesxx
@@ -60,12 +66,15 @@ GenericName[de]=Dock
 GenericName[el]=Dock
 GenericName[en_GB]=Dock
 GenericName[es]=Dock
+GenericName[et]=Dokk
 GenericName[eu]=Kaia
 GenericName[fi]=Telakka
 GenericName[gl]=Doca
+GenericName[ia]=Bassino
 GenericName[id]=Dok
 GenericName[it]=Aggancio
-GenericName[ko]=독
+GenericName[ko]=도구집
+GenericName[lt]=Dokas
 GenericName[nl]=Dock
 GenericName[nn]=Dokk
 GenericName[pl]=Dok
@@ -80,7 +89,7 @@ GenericName[zh_CN]=停靠栏
 GenericName[zh_TW]=Dock
 Icon=latte-dock
 Categories=Utility;X-SuSE-DesktopUtility;
-Exec=/usr/bin/latte-dock
+Exec=/bedrock/bin/strat debian /usr/bin/latte-dock
 InitialPreference=1
 StartupNotify=false
 Terminal=false
@@ -90,9 +99,10 @@ X-DBUS-ServiceName=org.kde.lattedock
 X-DBUS-StartupType=unique
 X-KDE-PluginInfo-Author=Michail Vourlakos, Smith Ar
 X-KDE-PluginInfo-Email=mvourlakos@gmail.com, audoban@openmailbox.org
-X-KDE-PluginInfo-Version=0.8.96
-X-KDE-PluginInfo-Website=https://github.com/psifidotos/Latte-Dock
+X-KDE-PluginInfo-Version=0.9.85
+X-KDE-PluginInfo-Website=https://userbase.kde.org/LatteDock
 X-KDE-StartupNotify=false
 X-KDE-SubstituteUID=false
+X-KDE-autostart-phase=1
 X-KDE-Wayland-Interfaces=org_kde_plasma_window_management,org_kde_kwin_keystate
 
