--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,12 +1,8 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
- <dir>~/.fonts</dir>
- <match target="font">
-  <edit name="rgba" mode="assign">
-   <const>rgb</const>
-  </edit>
- </match>
+ <!-- Bedrock Linux cross-stratum fonts -->
+ <dir>/bedrock/cross/fonts/</dir>
  <match target="font">
   <edit name="hinting" mode="assign">
    <bool>true</bool>
@@ -17,9 +13,5 @@
    <const>hintslight</const>
   </edit>
  </match>
- <match target="font">
-  <edit name="antialias" mode="assign">
-   <bool>true</bool>
-  </edit>
- </match>
+ <dir>~/.fonts</dir>
 </fontconfig>
