Update directory in zshconf

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,12 +4,12 @@
  <!-- Bedrock Linux cross-stratum fonts -->
  <dir>/bedrock/cross/fonts/</dir>
  <match target="font">
-  <edit name="hinting" mode="assign">
+  <edit mode="assign" name="hinting">
    <bool>true</bool>
   </edit>
  </match>
  <match target="font">
-  <edit name="hintstyle" mode="assign">
+  <edit mode="assign" name="hintstyle">
    <const>hintslight</const>
   </edit>
  </match>
