Update Clight, add new modules

--- a/.config/clight.conf
+++ b/.config/clight.conf
@@ -7,15 +7,28 @@
 ## then open issue on github attaching log
  verbose = true;
 
-## Uncomment to let Clight manage "Docked" laptop state
-## as an inhibition (pausing DPMS and dimmer).
-## Note that "Docked" state is only checked when
-## laptop lid is closed or opened.
-# inhibit_docked = true;
+###################
+# INHIBITION TOOL #
+########################################################
+# Requires DIMMER or DPMS enabled. Disabled otherwise. #
+########################################################
+inhibit:
+{
+    ## Uncomment to let Clight manage "Docked" laptop state
+    ## as an inhibition (pausing DPMS and dimmer).
+    ## Note that "Docked" state is only checked when
+    ## laptop lid is closed or opened.
+    # inhibit_docked = true;
+    
+    ## Uncomment to let Clight manage inhibition requests
+    ## suppressing org.freedesktop.PowerManagement too
+    ## (ie: preventing your laptop to suspend/hibernate)
+    # inhibit_pm = true;
+};
 
-############################## 
+##############################
 # BACKLIGHT CALIBRATION TOOL #
-############################## 
+##############################
 backlight:
 {
     ## Uncomment to disable
@@ -52,10 +65,10 @@ backlight:
     ## Then, it can only be manually triggered by bus api.
     # no_auto_calibration = true;
 
-    ## Uncomment to let BACKLIGHT module inhibit automatic calibration when laptop lid is closed.
+    ## Uncomment to let BACKLIGHT module pause automatic calibration when laptop lid is closed.
     ## Mostly useful when laptop gets docked and thus internal webcam
     ## would not be able to correctly capture ambient brightness.
-    # inhibit_on_lid_closed = true;
+    # pause_on_lid_closed = true;
 };
 
 ###################
@@ -64,11 +77,11 @@ backlight:
 sensor:
 {
     ## Y points used to compute ambient_brightness while ON AC -> screen backlight curve best-fit parameters 
-    ## through polynomial regression. X values are simply array's indexes (from 0 to 10 included).
-     ac_regression_points = [ 0.02, 0.11, 0.18, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
+    ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
+     ac_regression_points = [ 0.02, 0.10, 0.18, 0.26, 0.40, 0.58, 0.73, 0.82, 0.85, 0.90, 0.95 ];
 
     ## Y points used to compute ambient_brightness while ON BATTERY -> screen backlight curve best-fit parameters 
-    ## through polynomial regression. X values are simply array's indexes (from 0 to 10 included).
+    ## through polynomial regression. Ambient brightness values are simply array's indexes (from 0 to 10 included).
      batt_regression_points = [ 0.02, 0.09, 0.11, 0.17, 0.24, 0.38, 0.56, 0.66, 0.72, 0.74, 0.85 ];
 
     ## Sensor device to be used (Webcam or ALS device, eg: video0 or iio:device0)
@@ -89,6 +102,7 @@ sensor:
 keyboard:
 {
     ## Uncomment to disable keyboard automatic calibration.
+    ## It is automatically disabled anyway where not available.
     # disabled = true;
 
     ## Uncomment to switch off keyboard on dimming/dpms.
@@ -101,10 +115,13 @@ keyboard:
 ##############
 # GAMMA TOOL #
 ##############
+##########################################
+# Requires X server. Disabled otherwise. #
+##########################################
 gamma:
 {
     ## Uncomment to disable gamma tool
-     disabled = true;
+    # disabled = true;
 
     ## Uncomment to disable gamma smooth transitions
     # no_smooth_transition = true;
@@ -116,23 +133,7 @@ gamma:
     # trans_timeout = 300;
 
     ## Gamma temperature during day and night
-    # temp = [ 6500, 4000 ];
-
-    ## Desired latitude for gamma support (sunrise/sunset in this location)
-    # latitude = 40.9;
-
-    ## Desired longitude for gamma support (sunrise/sunset in this location)
-    # longitude = 7.16;
-
-    ## Force set a sunrise time
-    # sunrise = "7:00";
-
-    ## Force set a sunset time
-    # sunset = "19:00";
-
-    ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
-    ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
-    # event_duration = 1800;
+     temp = [ 6500, 4200 ];
 
     ## Enable to let GAMMA smooth transitions last (2 * event_duration),
     ## in a redshift-like way. 
@@ -142,7 +143,7 @@ gamma:
     ## Note that if clight is started outside of an event, correct gamma temperature
     ## will be immediately setted using normal parameters:
     ## no_smooth_gamma_transition, gamma_trans_step, gamma_trans_timeout
-    # long_transition = true;
+     long_transition = true;
 
     ## Let screen temperature match ambient brightness, like monitor backlight.
     ## When enabled, screen temperature won't be changed time-based.
@@ -152,9 +153,37 @@ gamma:
     # ambient_gamma = true;
 };
 
+################
+# DAYTIME TOOL #
+################
+########################################################
+# Retrieves Sunrise and Sunset times for user location #
+########################################################
+daytime:
+{
+    ## Desired latitude for gamma support (sunrise/sunset in this location)
+    # latitude = 40.9;
+
+    ## Desired longitude for gamma support (sunrise/sunset in this location)
+    # longitude = 7.16;
+
+    ## Force set a sunrise time
+     sunrise = "7:00";
+
+    ## Force set a sunset time
+     sunset = "20:30";
+
+    ## Duration of an "event". Clight will enter "event" mode (more frequent screen recalibrations)
+    ## from event_duration seconds before a sunrise/sunset, until event_duration seconds after.
+    # event_duration = 1800;
+};
+
 ###############
 # DIMMER TOOL #
 ###############
+###########################################
+# Requires BACKLIGHT. Disabled otherwise. #
+###########################################
 dimmer:
 {
     ## Uncomment to disable dimmer tool
@@ -175,15 +204,18 @@ dimmer:
     ## Timeouts on AC/on BATT. 
     ## Set any of these to <= 0 to disable dimmer
     ## in the corresponding AC state.
-    # timeouts = [ 45, 20 ];
+     timeouts = [ 200, 100 ];
 
     ## Change dimmed backlight level, in percentage
-    # dimmed_pct = 0.2;
+     dimmed_pct = 0.06;
 };
 
 #############
 # DPMS TOOL #
 #############
+#################################################
+# Requires X server or tty. Disabled otherwise. #
+#################################################
 dpms:
 {
     ## Uncomment to disable dpms management
@@ -198,6 +230,9 @@ dpms:
 ############################
 # SCREEN COMPENSATION TOOL #
 ############################
+########################################################
+# Requires X server and BACKLIGHT. Disabled otherwise. #
+########################################################
 screen:
 {
     ##############################################################################################################
@@ -224,7 +259,7 @@ screen:
 
     ## How much does your screen-emitted brightness affect
     ## ambient brightness, in your setup, in percentage.
-     contrib = 0.11;
+     contrib = 0.1;
 
     ## How many samples should be used to compute average 
     ## screen-emitted brightness.
